# dsi442_2025

./: .gitignore  README.md  app.py  config.py  evaluate.py  main.py  pyproject.toml
docs/: digital_soul_paper.docx
src/: 01_convert_audio.py  02_inspect_labels.py  features.py  preprocessing.py  trainer.py  utils.py
